--- a/styles.css
+++ b/styles.css
@@ -136,18 +136,20 @@ body {
 
 
         #home{
-            
-            p {
-                font-size: 30px;
-                color: black;
-                margin-bottom: 0
-            }
 
             p.home--title {
                 font-size: 20px;
                 color: red;
                 margin-bottom: 10px;
             }
+            
+            
+            p {
+                font-size: 30px;
+                color: black;
+                margin-bottom: 0;
+            }
+
             
             img{
                 max-width: 70%;
