--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,9 @@ body {
      }
 
     main {
-        margin: 15px 12%;
+        margin: 15px 12% 60px 12%;
         text-align: center;
+        overflow: auto;
         
         .title {
             font-size: 30px;
@@ -76,7 +77,7 @@ body {
         }
         .description{
             font-size: 20px;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
         .redirect {
             font-size: 20px;
@@ -201,7 +202,7 @@ body {
             flex-direction: row;
             justify-content: center;
             font-size: 1.5em;
-            margin-top: 20px;
+            margin-top: 15px;
             div {
                 margin: 0px 25px;
             }
