--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Source Sans Pro Topnav', sans-serif;
-    padding-top: 60px;
+    padding-top: 9vh;
     
 }
 #app {
@@ -12,10 +12,10 @@ body {
         
         display: flex;
         align-items: center;
-        padding: 0px 15%;
+        padding: 0px 13%;
         background-color: #F5F5F5;
         overflow: hidden;
-        font-size: 1.1em;
+        font-size: 1.2em;
 
         .nav-icon {
             display:flex;
@@ -34,7 +34,7 @@ body {
         ul {
             list-style-type: none;
             margin: 0;
-            padding: 5px 0 5px 0;
+            padding: 0.8vh 0;
             overflow: hidden;
             
             display: flex;
@@ -43,12 +43,12 @@ body {
             li {
                 display: block;
                 text-align: center;
-                padding: 10px 20px;
+                padding: 1.5vh 1.4vw;
                 a {
                     text-decoration: none;
                     color: black;
                 }
-                border-radius: 20px
+                border-radius: 3vh;
             } 
 
             li:hover {
@@ -67,31 +67,31 @@ body {
      }
 
     main {
-        margin: 15px 12% 60px 12%;
+        margin: 2vh 12% 9vh 12%;
         text-align: center;
         overflow: auto;
         
         .title {
-            font-size: 30px;
+            font-size: 2.3em;
             color:black;
         }
         .description{
-            font-size: 20px;
-            margin-bottom: 20px;
+            font-size: 1.4em;
+            margin-bottom: 3vh;
         }
         .redirect {
-            font-size: 20px;
+            font-size: 1.5em;
         }
 
         .text-and-img {
-            padding: 15px;
-            border-radius: 15px;
+            padding: 2vh;
+            border-radius: 2.25vh;
             display: flex;
             justify-content: space-between;
             .text {
                 text-align: left;
                 /* float:left; */
-                p {margin-top: 10px;}
+                p {margin-top: 1.5vh;}
                 font-size: 1.25em;
             }
             
@@ -101,11 +101,11 @@ body {
             
 
             img {
-                width: 150px;
+                width: 20vh;
             } 
 
             #metagraph {
-                width: 300px;
+                width: 42vh;
             }
 
         }
@@ -117,9 +117,9 @@ body {
         }
 
         .text-and-command {
-            margin: 20px 0;
+            margin: 3vh 0;
             > div {
-                margin-top: 10px;
+                margin-top: 1.5vh;
             } 
             .well p {
                 margin: 0;
@@ -127,12 +127,12 @@ body {
             .command-description {
                 max-width: 75%;
                 li {
-                    margin-bottom: 2px;
+                    margin-bottom: 0.3vh;
                 }
 
                 div {
                     display: inline-block;
-                    padding: 2px;
+                    padding: 0.3vh;
                     margin-bottom: 0
                 }
             }           
@@ -142,14 +142,14 @@ body {
         #home{
 
             p.home--title {
-                font-size: 20px;
+                font-size: 1em;
                 color: red;
-                margin-bottom: 10px;
+                margin-bottom: 1.5vh;
             }
             
             
             p {
-                font-size: 30px;
+                font-size: 1.4em;
                 color: black;
                 margin-bottom: 0;
             }
@@ -163,8 +163,8 @@ body {
 
         #overview {
             #architecture {
-                border-radius: 20px;
-                box-shadow: 0 0 30px rgba(0, 128, 128, 0.3);
+                border-radius: 3vh;
+                box-shadow: 0 0 4.5vh rgba(0, 128, 128, 0.3);
                 img {
                     max-width: 90%;
                     
@@ -178,15 +178,16 @@ body {
             display:flex;
             flex-direction: row;
             justify-content: center;
-            
+            margin-top: 5vh;
             div {
                 color: black;
                 font-size: 1.2em;
-                padding: 15px;
+                padding: 2.25vh;
                 background-color: rgba(0, 128, 128, 0.3);
-                margin: 10px 15px;
-                border-radius: 50px;
-                box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+                margin: 1.5vh 1.2vw;
+                border-radius: 7.5vh;
+                box-shadow: 0 0 0.75vh rgba(0, 0, 0, 0.15);
+                cursor: default;
             }
             :first-child {
                 margin-left: 0;
@@ -202,9 +203,9 @@ body {
             flex-direction: row;
             justify-content: center;
             font-size: 1.5em;
-            margin-top: 15px;
+            margin-top: 2.75vh;
             div {
-                margin: 0px 25px;
+                margin: 0px 2vw;
             }
             :first-child {
                 margin-left: 0;
@@ -222,14 +223,11 @@ body {
         width: 100%;
         background-color: #014d4e;
         color: white;
-        padding: 15px 15%;
+        padding: 2.25vh 15%;
         p {
             margin: 0;
         }
-        margin-top: 10px;
-
-
-
+        margin-top: 1.5vh;
     }
 }
 
@@ -238,7 +236,7 @@ body {
 }
 
 hr {
-    margin: 18px 0;
+    margin: 1vh 0;
     border: 0;
     border-top: 1px solid #eee;
     border-bottom: 1px solid #fff;
@@ -260,14 +258,14 @@ hr {
     border-collapse:separate;
     min-width:100%;
     max-height: 100%;
-    margin:0cm auto;
+    margin:0 auto;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     /* overflow: scroll; */
     overflow-y:scroll;
     display: block;
     border-bottom: 2px solid #009879;
     box-sizing: border-box;
-    border-radius: 20px;
+    border-radius: 3vh;
     border-spacing: 0;
 }
 
